nova_tests/strings/neg/plan131_ptr_deref_write_pos.nv
// Plan 131 Ф.2 — deref write: *ptr = v via typed *mut int pointer.
// Allocate int, write 42 via deref, read back.
// EXPECT_OUTPUT: 42

module neg.plan131_ptr_deref_write_pos

import std.runtime.raw_mem.{RawMem}

fn main() -> () {
    unsafe {
        ro p = RawMem.alloc(size_of[int]()) as *mut int
        *p = 42
        println(*p)
    }
}
